  - Replace pre 1.19 entity/block keys with constants, courtesy of Warrior with PR #7992.
  - Update inventory system to use components & PDC, courtesy of Warrior with PR #7982.
0.101.2.7:
  - Fix the changelog reader thinking the limit has been reached, courtesy of Warrior with PR #7994.
  - Fix getting lingering potion effects on legacy versions, courtesy of Warrior with PR #7997.
    - Closes #7996.
  - Fix getting respawn location <1.21.5, courtesy of Warrior with PR #7998.
    - Closes #7995.
  - Fix literal translatables attempting to translate, courtesy of Warrior with PR #7999.
  - Add setting for default peaceful nation to create, courtesy of RyanoDino with PR #8000.
    - Closes #7970.
  - New Config Option: nation.default_neutral
    - Default: true
    - Default neutral status of the nation (are new nations neutral by default?)
  - Add saving of hasActiveWar for towns and nations, courtesy of SulkyWhale with PR #8002.
  - Fix mountable entities having their saddles sheared, copper golems having their items dropped.
  - Add ability to set max town and nation board lengths.
  - New Config Option: global_town_settings.max_board_length
    - Default: 170
    - The maximum number of characters that the town (and nation,) board messages can be.
  - Add unformatted upkeep PAPI placeholders.
    - Closes #7943.
  - New PAPI Placeholders:
    - %townyadvanced_daily_town_upkeep_unformatted% - An unformatted town upkeep amount.
    - %townyadvanced_daily_nation_upkeep_unformatted% - An unformatted nation upkeep amount.
0.101.2.8:
  - Fix unneeded msg_invalid_name exception message from /n ally.
    - Closes #8006.
0.102.0.0:
  - Bump version for release.
0.102.0.1:
  - Add new shear-to-remove-saddle mobs to entity list, courtesy of Warrior with PR #8018.
  - Fix admin permissions on LuckPerms-using servers where OPs do not receieve towny.admin.
    - OPs will now be given the towny.admin permission node by default.
    - Closes #8017.